fix(gen3): keep app-login banner subtitle visible on short viewports (#4087)
OKTA-1164555 fix(gen3): keep app-login banner subtitle visible on short viewports

--- a/src/v3/src/components/Widget/style.scss
+++ b/src/v3/src/components/Widget/style.scss
@@ -196,9 +196,6 @@
     padding-block: 5px;
     padding-inline: 0;
   }
-  .okta-container .applogin-banner .applogin-container p {
-    display: none;
-  }
 }
 .okta-container .applogin-banner .applogin-container h1 {
   margin-block: 0;
